dynamically chooses profile image, misc spacing issues

--- a/src/containers/Dashboard/components/UserStats/UserStats.module.scss
+++ b/src/containers/Dashboard/components/UserStats/UserStats.module.scss
@@ -31,4 +31,9 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+
+  p:not(:last-child) {
+    margin-bottom: $s-spacing;
+    min-width: 5rem;
+  }
 }
